--- a/app/src/main/res/layout/activity_add_tournament.xml
+++ b/app/src/main/res/layout/activity_add_tournament.xml
@@ -69,6 +69,7 @@
     </RelativeLayout>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/rl_top"
@@ -107,7 +108,8 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="gone">
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/filledInputAwards"
                     style="@style/OutlinedRoundBox"
@@ -130,6 +132,7 @@
                         android:imeOptions="actionNext"
                         android:inputType="text"
                         android:maxLines="1"
+                        android:visibility="gone"
                         android:textSize="@dimen/_10sdp"
                         android:fontFamily="@font/opensans_regular"
                         android:textColor="@color/black"
