--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#800000</color>
-    <color name="purple_500">#800000</color>
-    <color name="purple_700">#800000</color>
-    <color name="teal_200">#800000</color>
-    <color name="teal_700">#800000</color>
+    <color name="purple_200">#0E2245</color>
+    <color name="purple_500">#0E2245</color>
+    <color name="purple_700">#0E2245</color>
+    <color name="teal_200">#0E2245</color>
+    <color name="teal_700">#0E2245</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="smokewhite">#F5F5F5</color>
@@ -24,7 +24,7 @@
     <color name="light_sky">#CAE2F7</color>
     <color name="dark_selection">#4FB494</color>
 
-    <color name="green">#4CAF50</color>
+    <color name="green">#0E2245</color>
     <color name="black_semi_transparent">#B1000000</color>
     <color name="black_light_tranparent">#20000000</color>
     <color name="dim_sky">#246596</color>
