--- a/app/src/main/res/layout/activity_add_player.xml
+++ b/app/src/main/res/layout/activity_add_player.xml
@@ -76,7 +76,7 @@
                     android:hint="Player Name"
                     android:textColorHint="@color/dark_grey"
                     app:boxBackgroundColor="@color/white"
-                    app:boxStrokeColor="@color/green"
+                    app:boxStrokeColor="@color/purple_500"
                     app:hintTextColor="@color/purple_500"
                     app:startIconDrawable="@drawable/player_icon"
                     app:startIconTint="@null">
