--- a/app/src/main/res/layout/activity_tournament_details.xml
+++ b/app/src/main/res/layout/activity_tournament_details.xml
@@ -266,6 +266,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/liSpopnsort"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/_10sdp"
