--- a/app/src/main/res/layout/bottom_dialog_resume_scoring_area.xml
+++ b/app/src/main/res/layout/bottom_dialog_resume_scoring_area.xml
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="@dimen/_12sdp"
-            android:visibility="gone"
+            android:visibility="visible"
             android:textColor="@color/black"
             android:fontFamily="@font/opensans_semibold"
             android:layout_marginTop="@dimen/_10sdp"
