--- a/app/src/main/res/layout/out_type.xml
+++ b/app/src/main/res/layout/out_type.xml
@@ -33,22 +33,26 @@
             <!-- No Ball Buttons -->
             <Button
                 android:id="@+id/bowled"
-                style="@style/NoBallButtonStyle"
+                style="@style/OutButtonStyle"
+                android:layout_margin="@dimen/_5sdp"
                 android:text="Bowled" />
 
             <Button
                 android:id="@+id/caught"
-                style="@style/NoBallButtonStyle"
+                style="@style/OutButtonStyle"
+                android:layout_margin="@dimen/_5sdp"
                 android:text="Caught" />
 
             <Button
                 android:id="@+id/runOut"
-                style="@style/NoBallButtonStyle"
+                style="@style/OutButtonStyle"
+                android:layout_margin="@dimen/_5sdp"
                 android:text="Run Out" />
 
             <Button
                 android:id="@+id/lbw"
-                style="@style/NoBallButtonStyle"
+                style="@style/OutButtonStyle"
+                android:layout_margin="@dimen/_5sdp"
                 android:text="LBW" />
         </GridLayout>
 
@@ -201,7 +205,7 @@
                 android:fontFamily="@font/opensans_bold"
                 android:text="@string/save"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_8sdp"
+                android:textSize="@dimen/_5sdp"
                 android:visibility="visible"
                 app:cornerRadius="@dimen/_50sdp" />
 
