--- a/app/src/main/res/layout/your_player_list_child_demo.xml
+++ b/app/src/main/res/layout/your_player_list_child_demo.xml
@@ -26,12 +26,15 @@
             android:layout_height="@dimen/_40sdp"
             android:layout_centerVertical="true">
 
+            <!-- Circle Image -->
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/image"
                 android:layout_width="@dimen/_45sdp"
                 android:layout_height="@dimen/_45sdp"
                 android:src="@drawable/placeholder_user"
                 tools:ignore="ImageContrastCheck" />
+
+            <!-- OK Icon -->
 
             <RelativeLayout
                 android:id="@+id/rlChcek"
@@ -60,7 +63,6 @@
             android:orientation="vertical">
 
 
-
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -72,13 +74,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentStart="true"
-                    android:visibility="gone"
                     android:layout_gravity="center_vertical"
                     android:drawableLeft="@drawable/call_black_18dp"
                     android:drawablePadding="@dimen/_2sdp"
                     android:text="8799736451"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_8sdp"
+                    android:visibility="gone"
                     app:fontFamily="@font/opensans_regular" />
 
                 <LinearLayout
@@ -117,14 +119,14 @@
             android:id="@+id/tvTName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
             android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/_2sdp"
-            android:paddingStart="@dimen/_2sdp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginStart="@dimen/_5sdp"
-            android:text="Player Name (Bowler)"
+            android:layout_marginEnd="@dimen/_2sdp"
             android:layout_toLeftOf="@+id/cb"
             android:layout_toRightOf="@+id/rl_profile"
+            android:paddingStart="@dimen/_2sdp"
+            android:text="Player Name (Bowler)"
             android:textColor="@color/black"
             android:textSize="@dimen/_12sdp"
             app:fontFamily="@font/opensans_semibold" />
@@ -134,8 +136,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:enabled="false"
             android:layout_centerVertical="true"
+            android:enabled="false"
             android:visibility="gone">
 
         </CheckBox>
