--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -57,6 +57,13 @@
         <!--        //<item name="android:margin">4dp</item>-->
     </style>
 
+    <style name="OutButtonStyle">
+        <item name="android:background">@drawable/green_button_border</item>
+        <item name="android:layout_width">@dimen/_60sdp</item>
+        <item name="android:layout_height">40dp</item>
+        <!--        //<item name="android:margin">4dp</item>-->
+    </style>
+
     <style name="LegByeButtonStyle">
         <item name="android:background">@drawable/green_button_border</item>
         <item name="android:layout_width">60dp</item>
@@ -72,5 +79,11 @@
         <item name="android:background">@drawable/circle_background</item>
         <item name="android:layout_margin">8dp</item>
     </style>
+        <style name="CustomTabTextStyle" parent="TextAppearance.Design.Tab">
+            <item name="android:fontFamily">@font/opensans_semibold</item>
+            <item name="android:textSize">@dimen/_10sdp</item>
+            <item name="android:textColor">@color/dark_grey</item>
+        </style>
+
 
 </resources>
