App is committed at 15-1-25

--- a/app/src/main/res/layout/batting_leaderboard_child.xml
+++ b/app/src/main/res/layout/batting_leaderboard_child.xml
@@ -41,6 +41,7 @@ tools:ignore="NamespaceTypo">
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/rl_profile"
         android:layout_toLeftOf="@+id/tvPoints"
+        android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginEnd="@dimen/_5sdp"
         android:paddingStart="@dimen/_2sdp"
         android:layout_marginStart="@dimen/_5sdp"
@@ -53,7 +54,7 @@ tools:ignore="NamespaceTypo">
             android:layout_centerVertical="true"
             android:text="Player Name"
             android:layout_toLeftOf="@+id/cb"
-            android:textColor="@color/black"
+            android:textColor="@color/purple_700"
             android:textSize="@dimen/_10sdp"
             app:fontFamily="@font/opensans_semibold" />
         <LinearLayout
@@ -76,7 +77,7 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
                 <TextView
                     android:id="@+id/tvInningCount"
                     android:layout_width="match_parent"
@@ -89,13 +90,14 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
             </LinearLayout>
             <View
                 android:layout_width="@dimen/_1sdp"
-                android:layout_height="@dimen/_7sdp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/_2sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_2sdp"
                 android:background="@color/dim_grey"
                 />
 
@@ -131,9 +133,10 @@ tools:ignore="NamespaceTypo">
             </LinearLayout>
             <View
                 android:layout_width="@dimen/_1sdp"
-                android:layout_height="@dimen/_7sdp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/_2sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_2sdp"
                 android:background="@color/dim_grey"
                 />
 
@@ -152,7 +155,7 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
                 <TextView
                     android:id="@+id/tvAvgCount"
                     android:layout_width="match_parent"
@@ -165,13 +168,14 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
             </LinearLayout>
             <View
                 android:layout_width="@dimen/_1sdp"
-                android:layout_height="@dimen/_7sdp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/_2sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
                 android:background="@color/dim_grey"
                 />
 
@@ -190,7 +194,7 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
                 <TextView
                     android:id="@+id/tvSrCount"
                     android:layout_width="match_parent"
@@ -203,7 +207,7 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
             </LinearLayout>
 
 
@@ -212,7 +216,7 @@ tools:ignore="NamespaceTypo">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -229,7 +233,7 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
                 <TextView
                     android:id="@+id/tvHsCount"
                     android:layout_width="match_parent"
@@ -242,7 +246,7 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
             </LinearLayout>
 
 
@@ -278,6 +282,13 @@ tools:ignore="NamespaceTypo">
                     app:fontFamily="@font/opensans_semibold" />
             </LinearLayout>
 
+            <View
+                android:layout_width="@dimen/_1sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:background="@color/dim_grey"
+                />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -294,7 +305,7 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
                 <TextView
                     android:id="@+id/tvSixCount"
                     android:layout_width="match_parent"
@@ -307,10 +318,16 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
             </LinearLayout>
 
-
+            <View
+                android:layout_width="@dimen/_1sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:background="@color/dim_grey"
+                />
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -326,7 +343,7 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
                 <TextView
                     android:id="@+id/tv4sCount"
                     android:layout_width="match_parent"
@@ -339,9 +356,16 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
             </LinearLayout>
 
+            <View
+                android:layout_width="@dimen/_1sdp"
+                android:layout_height="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_5sdp"
+                android:layout_marginEnd="@dimen/_5sdp"
+                android:background="@color/dim_grey"
+                />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -358,7 +382,7 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
                 <TextView
                     android:id="@+id/tv50sCount"
                     android:layout_width="match_parent"
@@ -371,43 +395,40 @@ tools:ignore="NamespaceTypo">
                     android:textColor="@color/purple_700"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_4sdp"
-                android:orientation="horizontal">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_centerVertical="true"
-                    android:text="100S : "
-                    android:layout_toLeftOf="@+id/cb"
-                    android:textColor="@color/purple_700"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
-                <TextView
-                    android:id="@+id/tv100sCount"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/_2sdp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_centerVertical="true"
-                    android:text="746"
-                    android:layout_toLeftOf="@+id/cb"
-                    android:textColor="@color/purple_700"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:textSize="@dimen/_10sdp"
-                    app:fontFamily="@font/opensans_regular" />
+                    app:fontFamily="@font/opensans_semibold" />
             </LinearLayout>
 
         </LinearLayout>
-
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_centerVertical="true"
+                android:text="100S : "
+                android:layout_toLeftOf="@+id/cb"
+                android:textColor="@color/purple_700"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:textSize="@dimen/_10sdp"
+                app:fontFamily="@font/opensans_semibold" />
+            <TextView
+                android:id="@+id/tv100sCount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_2sdp"
+                android:layout_gravity="center_horizontal"
+                android:layout_centerVertical="true"
+                android:text="746"
+                android:layout_toLeftOf="@+id/cb"
+                android:textColor="@color/purple_700"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:textSize="@dimen/_10sdp"
+                app:fontFamily="@font/opensans_semibold" />
+        </LinearLayout>
 
     </LinearLayout>
 
